@@ -5,6 +5,8 @@ Version 1.0.2
       frame.f_locals nor generator.gi_code (don't enable code feature)
     * Add __dir__() special method to read object proxy and fake module
       objects
+    * Add SandoxConfig.allowSafeModule(): similar to allowModule() but don't
+      proxify the attribute
 
 Version 1.0.1 (2010-07-26)
 
